<resources>
    <string name="app_name">Album App Group 5</string>

    <!-- screen title -->
    <string name="settingsTitle">Settings</string>
    <string name="homeTitle"> Gallery </string>


    <!-- image options list  -->
    <string name="viewDetails">View details</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="shareImage">Share</string>
    <!-- app settings -->
    <string name="appearance">Appearance</string>
    <string-array name="appearanceOptions">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string name="settingsSave">Save</string>

    <!-- action buttons -->
    <string name="actionTakePhoto">Take photo</string>
    <string name="actionViewAlbums">View albums</string>

    <!-- image details -->
    <string name="nameLabel">Name</string>
    <string name="passwordLabel">Password</string>
    <string name="descriptionLabel">Description</string>
    <string name="tagsLabel">Tags</string>
    <string name="tagsLabel2">(Tap to remove)</string>
    <string name="tagAddButton">Add tag</string>
    <string name="datetimeLabel">Date added</string>
    <string name="locationLabel">Location taken</string>

    <string name="nameHint">No image name</string>
    <string name="passwordHint">No password</string>
    <string name="descriptionHint">No description</string>
    <string name="tagDefault">No tags</string>
    <string name="dateDefault">No information</string>
    <string name="locationHint">No location set</string>

    <string name="updateDetailsButton">Update</string>

    <string name="setWallpaper">Set Wallpaper</string>
    <string name="editImage">Edit Image</string>

    <!-- main activity toolbar menu -->
    <string name="actionSort">Sort</string>
</resources>